# libcolorout

./: .gitignore  CMakeLists.txt  README.md  configure  makelib
include/: ColorOut.h
src/: ColorOut.cpp  main.cpp
